--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>LINKS TO GAMES</title>
+        <title>Portfolio</title>
         <meta name="description" content="A list of my games.">
         <link rel="stylesheet" href="main.css">
         <title>Osvaldo Jimenez - Portfolio</title>
