--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
            
         <li>
             Zanzibar, senior year of university:
-<!--            <a href="Works/MacNoEditor.zip">Mac zip</a>-->
-<!--            <a href="Works/WindowsNoEditor.zip">Windows zip</a>-->
+            <a href="https://drive.google.com/file/d/1HW41ngTzR3V6aQQKtPLo2dSOVOKiRBXu/view">Mac zip</a>
+            <a href="https://drive.google.com/file/d/1NNSKqZKPmPg8P4uA0afFB3bcWjjrwDXl/view">Windows zip</a>
         </li>
         </ul>
         
