--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <!--        <meta http-equiv="X-UA-Compatible" content="IE=edge">-->
         <title>Portfolio</title>
         <meta name="description" content="My portfolio | Mi portfolio">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="main.css">
         <title>Osvaldo Jimenez - Portfolio</title>
     </head>
