--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>________________________________________</p>
         
         <h2>Works | Trabajos</h2>
-        <p> </p>
+        <p> Just some things I've worked on. Please see resumes for a more extensive list. | Solo algunas de las cosas que he hecho. Por favor vean los curriculum para una lista mas extensiva. </p>
         <ul>
         <li>
             Silver Knight, sophomore year of university: <a href="https://ojocs.github.io/Silver-Knight-Game/">https://ojocs.github.io/Silver-Knight-Game/</a>
