changed style again

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <p>________________________________________</p>
         
         <h2>Works | Trabajos</h2>
-        <p2>Please see resumes for a more extensive list.</p2>
-        <p>__</p>
-        <p3>Por favor vean los curriculums para una lista mas extensiva.</p3>
+        <h5>Please see resumes for a more extensive list.</h5>
+        
+        <h5>Por favor vean los curriculums para una lista mas extensiva.</h5>
         <ul>
         <li>
             Silver Knight, sophomore year of university: <a href="https://ojocs.github.io/Silver-Knight-Game/">https://ojocs.github.io/Silver-Knight-Game/</a>
