Adding in stuff for current projects

--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
         
         <h5>Por favor vean los curriculums para una lista mas extensiva.</h5>
         <ul>
+		
+	<li>
+            Aire, senior year of university: <a href="https://drive.google.com/drive/folders/1WOhlX68-NlIY1u66O37z0o31IQNTaiiF?usp=sharing">Aire Folder: Builds, README, Video</a>
+        </li>
+	<li>
+            Aire Music, senior year of university: <a href="https://drive.google.com/drive/folders/1Alqo_FqEXimQpQHkFgzV-wuLTrfRQ0Wb?usp=sharing">Aire Music Folder</a>
+        </li>
+		
+<!-- 	<li>
+            Mrs. Fantastic’s Freaky Figurine Shop, senior year of university: <a href="https://drive.google.com/drive/folders/14Xy4sHaangdP2DKxTUP3sHF6QcQDcIbf?usp=sharing">Builds Folder</a>
+        </li> -->
+	<li>
+            Mrs. Fantastic’s Freaky Figurine Shop Audio, senior year of university: <a href="https://drive.google.com/drive/folders/1r_hOlDuwtHHhF4z-58wI0KaGxicCFWAc?usp=sharing">Music Folder</a>
+        </li>
+		
         <li>
             Silver Knight, sophomore year of university: <a href="https://ojocs.github.io/Silver-Knight-Game/">https://ojocs.github.io/Silver-Knight-Game/</a>
         </li>
