Add proper links

--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
         <ul>
 		
 	<li>
-            Aire, senior year of university: <a href="https://drive.google.com/drive/folders/1WOhlX68-NlIY1u66O37z0o31IQNTaiiF?usp=sharing">Aire Folder: Builds, README, Video</a>
+            Aire, senior year of university: <a href="https://drive.google.com/drive/folders/1WOhlX68-NlIY1u66O37z0o31IQNTaiiF?usp=sharing">Aire Folder Drive Folder</a>
         </li>
+		<li>
+			<a href="https://youtu.be/3BBDMMhJJxE">Aire video demo</a>
+		</li>
 	<li>
             Aire Music, senior year of university: <a href="https://drive.google.com/drive/folders/1Alqo_FqEXimQpQHkFgzV-wuLTrfRQ0Wb?usp=sharing">Aire Music Folder</a>
         </li>
@@ -62,8 +65,7 @@
            
         <li>
             Zanzibar, senior year of university:
-            <a href="https://drive.google.com/file/d/1HW41ngTzR3V6aQQKtPLo2dSOVOKiRBXu/view">Mac zip</a>
-            <a href="https://drive.google.com/file/d/1NNSKqZKPmPg8P4uA0afFB3bcWjjrwDXl/view">Windows zip</a>
+            <a href="https://lajas.itch.io/zanzibar">https://lajas.itch.io/zanzibar</a>
         </li>
             
             <li>
