--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<a href="https://youtu.be/3BBDMMhJJxE">Aire video demo</a>
 		</li>
 	<li>
-            Aire Music, senior year of university: <a href="https://drive.google.com/drive/folders/1Alqo_FqEXimQpQHkFgzV-wuLTrfRQ0Wb?usp=sharing">Aire Music Folder</a>
+            <a href="https://drive.google.com/drive/folders/1Alqo_FqEXimQpQHkFgzV-wuLTrfRQ0Wb?usp=sharing">Aire Music Folder</a>
         </li>
 		
 <!-- 	<li>
