--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@
         <ul>
 		
 	<li>
-            Aire, senior year of university: <a href="https://drive.google.com/drive/folders/1WOhlX68-NlIY1u66O37z0o31IQNTaiiF?usp=sharing">Aire Folder Drive Folder</a>
-        </li>
-		<li>
-			<a href="https://youtu.be/3BBDMMhJJxE">Aire video demo</a>
-		</li>
-	<li>
-            <a href="https://drive.google.com/drive/folders/1Alqo_FqEXimQpQHkFgzV-wuLTrfRQ0Wb?usp=sharing">Aire Music Folder</a>
+            Aire, senior year of university: <a href="https://drive.google.com/drive/folders/1WOhlX68-NlIY1u66O37z0o31IQNTaiiF?usp=sharing">Aire Folder Drive Folder</a>--<a href="https://youtu.be/3BBDMMhJJxE">Aire video demo</a>--<a href="https://drive.google.com/drive/folders/1Alqo_FqEXimQpQHkFgzV-wuLTrfRQ0Wb?usp=sharing">Aire Music Folder</a>
         </li>
 		
 <!-- 	<li>
