--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
             Aire, senior year of university: <a href="https://drive.google.com/drive/folders/1WOhlX68-NlIY1u66O37z0o31IQNTaiiF?usp=sharing">Aire Drive Folder</a>--<a href="https://youtu.be/3BBDMMhJJxE">Aire video demo</a>--<a href="https://drive.google.com/drive/folders/1Alqo_FqEXimQpQHkFgzV-wuLTrfRQ0Wb?usp=sharing">Aire Music Folder</a>
         </li>
 		
-<!-- 	<li>
-            Mrs. Fantastic’s Freaky Figurine Shop, senior year of university: <a href="https://drive.google.com/drive/folders/14Xy4sHaangdP2DKxTUP3sHF6QcQDcIbf?usp=sharing">Builds Folder</a>
-        </li> -->
+	<li>
+            Mrs. Fantastic’s Freaky Figurine Shop, senior year of university: <a href="https://juliand547.itch.io/mrs-fantastics-freaky-figurine-shop">Itch.io page for the game</a>
+        </li>
+
 	<li>
             Mrs. Fantastic’s Freaky Figurine Shop Audio, senior year of university: <a href="https://drive.google.com/drive/folders/1r_hOlDuwtHHhF4z-58wI0KaGxicCFWAc?usp=sharing">Music Folder</a>
         </li>
