--- a/index.html
+++ b/index.html
@@ -41,11 +41,7 @@
         </li>
 		
 	<li>
-            Mrs. Fantastic’s Freaky Figurine Shop, senior year of university: <a href="https://juliand547.itch.io/mrs-fantastics-freaky-figurine-shop">Itch.io page for the game</a>
-        </li>
-
-	<li>
-            Mrs. Fantastic’s Freaky Figurine Shop Audio, senior year of university: <a href="https://drive.google.com/drive/folders/1r_hOlDuwtHHhF4z-58wI0KaGxicCFWAc?usp=sharing">Music Folder</a>
+            Mrs. Fantastic’s Freaky Figurine Shop, senior year of university: <a href="https://juliand547.itch.io/mrs-fantastics-freaky-figurine-shop">Itch.io page for the game</a>--<a href="https://drive.google.com/drive/folders/1r_hOlDuwtHHhF4z-58wI0KaGxicCFWAc?usp=sharing">Music</a>
         </li>
 		
         <li>
