--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 
                 <h4>
                     Mrs. Fantastic’s Freaky Figurine Shop: 3 children turned into toys by an evil witch are trapped in a toy store. Solve the puzzles and escape!
-                    <h5><a href="https://juliand547.itch.io/mrs-fantastics-freaky-figurine-shop">Itch.io page for the game</a>--<a href="https://drive.google.com/drive/folders/1r_hOlDuwtHHhF4z-58wI0KaGxicCFWAc?usp=sharing">Music</a></h5>
+                    <h5><a href="https://juliand547.itch.io/mrs-fantastics-freaky-figurine-shop">Itch.io page for the game</a>--<a href="https://drive.google.com/drive/folders/1r_hOlDuwtHHhF4z-58wI0KaGxicCFWAc?usp=sharing">Audio</a></h5>
                     <h5>Worked on audio and programming, helped with design among other things. Unity, C#, Audacity, Garageband, Github</h5>
                 </h4>
                 
