--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                 <h4>
                     Some music works:
                     <h5><a href="https://drive.google.com/drive/folders/1SUu4_v7kvVvl8ERQg_FofMdS0pqriHjE?usp=sharing">Drive with AET 305 works</a></h5>
+                    <h5>LogicProX</h5>
                 </h4>
                 
                 <h4>
