--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                 
                 <h4>
                     Zanzibar: Can you save the valley from the monsters that roam within it? Gain power from your defeated foes and slay the dragon in the castle in this 3d adventure!
-                    <h5><a href="https://lajas.itch.io/zanzibar">https://lajas.itch.io/zanzibar</a></h5>
+                    <h5><img src="Images/zanzibar_Title.png" class="img"></h5>
+                    <h5><a href="https://lajas.itch.io/zanzibar">Itch.io page</a></h5>
                     <h5>Worked on design, stats and combat system, weapons and player character. UE4, C++, Blueprints, Mixamo (Adobe), Gitlab</h5>
                 </h4>
                     
