--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
 
             <h2>Resume | Curriculum</h2>
             <ul>
-                <p2><a href="Resumes/Resume-April2021.pdf">Resume-April2021</a></p2>
+                <p2><a href="Resumes/Resume - May2021.pdf">May 2021 Resume</a></p2>
+                <p2><a href="Resumes/Resume-April2021.pdf">April 2021 Resume</a></p2>
                 <p2><a href="Resumes\Resume-Feb2021.pdf">Feb 2021 Resume</a></p2>
                 <p2><a href="Resumes/Jimenez_Osvaldo.resume.pdf"> Oct 2020 Resume</a></p2>
                 <p2><a href="Resumes/Resume%20--%20Current%20Sept%202020.pdf">Sept 2020</a></p2>
