--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <p2>Based off of preexisting code from other teammates</p2>
                 <p2>Improved said code while keeping functionality across everything</p2>
                 <p2>Made stats system to be generic and easy to use, and easily modifiable in current or future projects.</p2>
+                <p2>Wrote a technical design document for planning out the implementation process.</p2>
                 <h4>Created a powerup in Blueprints for a current project of the studio.</h4>
                 <p2>A drone that reacted to other actors in the game world, spawned by player input and with a lifetime.</p2>
                 <h5>UE4,  C++, Blueprints, Perforce, Jira, Scrum/Agile methodology</h5>
