typos fix for periods

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <h2>Experience | Experiencia</h2>
             <h3>Software Engineer Intern at EA: Industrial Toys Studio</h3>
             <ul>
-                <h4>Developed a stats system in UE4's C++ class, GameInstanceSubsystem.</h4>
+                <h4>Developed a stats system in UE4's C++ class, GameInstanceSubsystem</h4>
                 <p2>Based off of preexisting code from other teammates</p2>
                 <p2>Improved said code while keeping functionality across everything</p2>
-                <p2>Made stats system to be generic and easy to use, and easily modifiable in current or future projects.</p2>
-                <p2>Wrote a technical design document for planning out the implementation process.</p2>
-                <h4>Created a powerup in Blueprints for a current project of the studio.</h4>
-                <p2>A drone that reacted to other actors in the game world, spawned by player input and with a lifetime.</p2>
+                <p2>Made stats system to be generic and easy to use, and easily modifiable in current or future projects</p2>
+                <p2>Wrote a technical design document for planning out the implementation process</p2>
+                <h4>Created a powerup in Blueprints for a current project of the studio</h4>
+                <p2>A drone that reacted to other actors in the game world, spawned by player input and with a lifetime</p2>
                 <h5>UE4,  C++, Blueprints, Perforce, Jira, Scrum/Agile methodology</h5>
             </ul>
             
