--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3>Software Engineer Intern at EA: Industrial Toys Studio</h3>
             <ul>
                 <h4>Developed a stats system in UE4's C++ class, GameInstanceSubsystem</h4>
-                <p2>Based off of preexisting code from other teammates</p2>
+                <p2>Designed the system off preexisting code from other teammates</p2>
                 <p2>Improved said code while keeping functionality across everything</p2>
                 <p2>Made stats system to be generic and easy to use, and easily modifiable in current or future projects</p2>
                 <p2>Wrote a technical design document for planning out the implementation process</p2>
