--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <h2>Sites | Sitios</h2>
                 <p2>Itch.io: <a href="https://lajas.itch.io/">https://lajas.itch.io/</a></p2>
-                <p2>Github: <a href="https://github.com/ojocs">https://gitlab.com/ojocs</a></p2>
+                <p2>Github: <a href="https://github.com/ojocs">https://github.com/ojocs</a></p2>
                 <p2>Gitlab: <a href="https://gitlab.com/osvcs">https://gitlab.com/osvcs</a></p2>
                 <p2>LinkedIn: <a href="https://www.linkedin.com/in/osvaldo-jo/">https://www.linkedin.com/in/osvaldo-jo/</a></p2>
             
