consistency with names for resumes lol

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
                 <p2><a href="Resumes/Resume-April2021.pdf">April 2021 Resume</a></p2>
                 <p2><a href="Resumes\Resume-Feb2021.pdf">Feb 2021 Resume</a></p2>
                 <p2><a href="Resumes/Jimenez_Osvaldo.resume.pdf"> Oct 2020 Resume</a></p2>
-                <p2><a href="Resumes/Resume%20--%20Current%20Sept%202020.pdf">Sept 2020</a></p2>
-                <p2><a href="Resumes/Resume%20--%20as%20of%202-21-2019%20-%20Osvaldo%20Jimenez.pdf">Feb 2019</a></p2>
-                <p2><a href="Resumes/Resume%20--%20as%20of%2011_21_2018%20-%20Osvaldo%20Jimenez.docx">Oct 2018</a></p2>
+                <p2><a href="Resumes/Resume%20--%20Current%20Sept%202020.pdf">Sept 2020 Resume</a></p2>
+                <p2><a href="Resumes/Resume%20--%20as%20of%202-21-2019%20-%20Osvaldo%20Jimenez.pdf">Feb 2019 Resume</a></p2>
+                <p2><a href="Resumes/Resume%20--%20as%20of%2011_21_2018%20-%20Osvaldo%20Jimenez.docx">Oct 2018 Resume</a></p2>
             <p>________________________________________</p>
             <p></p>
         </div>
