--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
             
             <p>________________________________________</p>
 
+            <h2>Academic Transcript | Expediente Académico</h2>
+                <p2><a href="Misc/University_of_Texas_Academic_Summary.pdf">Transcript</a></p2>
+
+            <p>________________________________________</p>
+
             <h2>Sites | Sitios</h2>
                 <p2>Itch.io: <a href="https://lajas.itch.io/">https://lajas.itch.io/</a></p2>
                 <p2>Github: <a href="https://github.com/ojocs">https://github.com/ojocs</a></p2>
