--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                 <h5><a href="Misc/Game Narrative Review - Star Wars Battlefront II by Osvaldo Jimenez.pdf">SW-BF2 -- Game Narrative Review</a></h5>
             </div>
             
-            <p>________________________________________</p>
+            <!-- <p>________________________________________</p>
 
             <h2>Academic Transcript | Expediente Académico</h2>
-                <p2><a href="Misc/University_of_Texas_Academic_Summary.pdf">Transcript</a></p2>
+                <p2><a href="Misc/University_of_Texas_Academic_Summary.pdf">Transcript</a></p2> -->
 
             <p>________________________________________</p>
 
