Display pdf and added August resume

--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
                 <p>________________________________________</p>
 
                 <h2>Resume | Curriculum</h2>
+                <embed src="Resumes/Resume - August2021.pdf" width="800px" height="1000px" />
+                <p2><a href="Resumes/Resume - August2021.pdf">August 2021 Resume</a></p2>
                 <p2><a href="Resumes/Resume - May2021.pdf">May 2021 Resume</a></p2>
                 <p2><a href="Resumes/Resume-April2021.pdf">April 2021 Resume</a></p2>
                 <p2><a href="Resumes\Resume-Feb2021.pdf">Feb 2021 Resume</a></p2>
