fixing some things for mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body id="body">
 
-    <div class="container">
+    <div class="container" onload="detectMobile">
 
         <h1>Osvaldo Jimenez: Portfolio</h1>
 
@@ -144,7 +144,9 @@
                 <p>________________________________________</p>
 
                 <h2>Resume | Curriculum</h2>
-                <embed src="Resumes/Resume - August2021.pdf" width="800px" height="1000px" />
+                <!-- <% if (detectMobile()) {%> -->
+                <!-- <embed src="Resumes/Resume - August2021.pdf" width="800px" height="1000px" /> -->
+                <!-- <% } endif %> -->
                 <p2><a href="Resumes/Resume - August2021.pdf">August 2021 Resume</a></p2>
                 <p2><a href="Resumes/Resume - May2021.pdf">May 2021 Resume</a></p2>
                 <p2><a href="Resumes/Resume-April2021.pdf">April 2021 Resume</a></p2>
