--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         <div class="myWork" id="freaky">
             <h4>3 children turned into toys by an evil witch are trapped in a toy store. Solve the puzzles and escape!
             </h4>
-            <h5><a href="https://juliand547.itch.io/mrs-fantastics-freaky-figurine-shop"><img src="Images/Sign-MrsFantasticFreakyFigurineShop.png" class="img"></a></h5>
+            <h5><a href="https://juliand547.itch.io/mrs-fantastics-freaky-figurine-shop"><img
+                        src="Images/Sign-MrsFantasticFreakyFigurineShop.png" class="img"></a></h5>
             <h5><a href="https://juliand547.itch.io/mrs-fantastics-freaky-figurine-shop">Itch.io page</a> | <a
                     href="https://drive.google.com/drive/folders/1r_hOlDuwtHHhF4z-58wI0KaGxicCFWAc?usp=sharing">Audio</a>
             </h5>
@@ -69,7 +70,8 @@
             <h2>
                 <div class="myWork" id="silver">
                     <h4>Use your teleporting powers to defeat the evil monsters in this hack-and-slash adventure!</h4>
-                    <h5><a href="https://ojocs.github.io/Silver-Knight-Game/"><img src="Images/silverKnight-Intro.png" class="img"></a></h5>
+                    <h5><a href="https://ojocs.github.io/Silver-Knight-Game/"><img src="Images/silverKnight-Intro.png"
+                                class="img"></a></h5>
                     <h5><a href="https://lajas.itch.io/silver-knight">Itch.io page</a> | <a
                             href="https://ojocs.github.io/Silver-Knight-Game/">Game</a></h5>
                     <h5>Worked on programming for characters. Phaser.io, Javascript, HTML/CSS, Github</h5>
@@ -79,7 +81,8 @@
                 <div class="myWork" id="bieneStar">
                     <h4>An app designed with your well-being in mind. Complete daily tasks, interact with other users,
                         and relax.</h4>
-                    <h5><a href="https://gitlab.com/JordanHilder9/cs371l-ios-group-proj"><img src="Images/bieneStar.png" class="img2"></a></h5>
+                    <h5><a href="https://gitlab.com/JordanHilder9/cs371l-ios-group-proj"><img src="Images/bieneStar.png"
+                                class="img2"></a></h5>
                     <h5><a href="https://gitlab.com/JordanHilder9/cs371l-ios-group-proj">Gitlab link (request access if
                             needed)</a></h5>
                     <h5>Worked on "share a feeling" feature, general programming and audio. Swift iOS, Gitlab,
@@ -90,7 +93,8 @@
                         class="showClass" /></h2>
                 <div class="myWork" id="flightFight">
                     <h4>Destroy the incoming blocks as a laser-powered triangle in this asteroids inspired game!</h4>
-                    <h5><a href="https://scratch.mit.edu/projects/98059678"><img src="Images/fightOrFlight.png" class="img"></a></h5>
+                    <h5><a href="https://scratch.mit.edu/projects/98059678"><img src="Images/fightOrFlight.png"
+                                class="img"></a></h5>
                     <h5><a href="https://scratch.mit.edu/projects/98059678">Game link</a></h5>
                     <h5>Worked on programming, art, and more. MIT's Scratch</h5>
                 </div>
@@ -99,7 +103,8 @@
                 <div class="myWork" id="zanzibar">
                     <h4>Can you save the valley from the monsters that roam within it? Gain power from your defeated
                         foes and slay the dragon in the castle in this 3d adventure!</h4>
-                    <h5><a href="https://lajas.itch.io/zanzibar"><img src="Images/zanzibar_Title.png" class="img"></a></h5>
+                    <h5><a href="https://lajas.itch.io/zanzibar"><img src="Images/zanzibar_Title.png" class="img"></a>
+                    </h5>
                     <h5><a href="https://lajas.itch.io/zanzibar">Itch.io page</a></h5>
                     <h5>Worked on design, stats and combat system, weapons and player character. UE4, C++, Blueprints,
                         Mixamo (Adobe), Gitlab</h5>
@@ -111,6 +116,9 @@
                     <h5><a href="https://drive.google.com/drive/folders/1SUu4_v7kvVvl8ERQg_FofMdS0pqriHjE?usp=sharing">Drive
                             with AET 305 works</a></h5>
                     <h5>LogicProX</h5>
+                    <h5><a href="https://drive.google.com/drive/folders/1IMfaCa26D33AZM_cdGHVvgmgyBNBIUCb?usp=sharing">Drive
+                            with other original works</a></h5>
+                    <h5>Garageband</h5>
                 </div>
 
                 <h2><input type="button" value="Narrative essay/analysis on games:" onclick="show(this, 'narrative')"
@@ -137,8 +145,8 @@
                             src="Images/GitHub_logo.png"></a>
                     <a href="https://gitlab.com/osvcs"><input type="image" value="Gitlab" class="sitesImg"
                             src="Images/gitlab-logo-png-transparent.png"></a>
-                    <a href="https://www.linkedin.com/in/osvaldo-jo/"><input type="image" value="LinkedIn" class="sitesImg"
-                        src="Images/logo-linkedin-icon-4096.png"></a>
+                    <a href="https://www.linkedin.com/in/osvaldo-jo/"><input type="image" value="LinkedIn"
+                            class="sitesImg" src="Images/logo-linkedin-icon-4096.png"></a>
                 </p2>
 
                 <p>________________________________________</p>
