Added keywords, made experiences clickable buttons

--- a/index.html
+++ b/index.html
@@ -22,19 +22,38 @@
         <p> <a href="mailto:ochoa@utexas.edu?">ochoa@utexas.edu</a></p>
         <p>________________________________________</p>
         <h2>Experience | Experiencia</h2>
-        <h3>Software Engineer Intern at EA: Industrial Toys Studio</h3>
-        <ul>
-            <h4>Developed a stats system in UE4's C++ class, GameInstanceSubsystem</h4>
-            <p2>Designed the system off preexisting code from other teammates</p2>
-            <p2>Improved said code while keeping functionality across everything</p2>
-            <p2>Made stats system to be generic and easy to use, and easily modifiable in current or future projects
-            </p2>
-            <p2>Wrote a technical design document for planning out the implementation process</p2>
-            <h4>Created a powerup in Blueprints for a current project of the studio</h4>
-            <p2>A drone that reacted to other actors in the game world, spawned by player input and with a lifetime</p2>
-            <h5>UE4, C++, Blueprints, Perforce, Jira, Scrum/Agile methodology</h5>
-        </ul>
+        <p>Click on each to learn more!</p>
+        <h2><input type="button" value="Software Engineer 1 at Keywords Studios" onclick="show(this, 'SWE1')" class="showClass"/></h2>
+        <div class="myWork" id="SWE1" tag="KS">
+            <ul>
+                <h4>Work in internal and external projects.</h4>
+                <p2>General tasks include:</p2>
+                <p3>Functionality (in code or otherwise), Fixing bugs, Documentation (e.g. TDD), Working/Communicating with clients and team.</p3>
+                <h4>For Internal work</h4>
+                <p2>Worked on internal projects. Also on improving and learning new skills.</p2>
+                <p3>One project revolved around profiling for performance in Unity</p3>
+                <p3>Involved researching, applying that knowledge to a real project, and presenting it all to the other engineers.</p3>
+                <h4>For External Work</h4>
+                <p2>Developing functionality for games in C++/Blueprints within UE4/5.</p2>
+                <p3>Networking, character actions/movement, and other miscellaneous tasks.</p3>
+                <h5>UE4, UE5, Unity, C++, Blueprints, Perforce, Jira, Slack, Teams, Microsoft Office, Scrum/Agile methodology</h5>
+            </ul>
+        </div>
 
+        <h2><input type="button" value="Engineer Intern at EA: Industrial Toys Studio" onclick="show(this, 'Internship')" class="showClass"/></h2>
+        <div class="myWork" id="Internship" tag="EA">
+            <ul>
+                <h4>Developed a stats system in UE4's C++ class, GameInstanceSubsystem</h4>
+                <p2>Designed the system off preexisting code from other teammates</p2>
+                <p3>Improved said code while keeping functionality across everything</p3>
+                <p2>Made stats system to be generic and easy to use, and easily modifiable in current or future projects
+                </p2>
+                <p3>Wrote a technical design document for planning out the implementation process</p3>
+                <h4>Created a powerup in Blueprints for a current project of the studio</h4>
+                <p2>A drone that reacted to other actors in the game world, spawned by player input and with a lifetime</p2>
+                <h5>UE4, C++, Blueprints, Perforce, Jira, Scrum/Agile methodology</h5>
+            </ul>
+        </div>
         <p>________________________________________</p>
 
         <h2>Works | Trabajos</h2>
