Updated resume for November 2022. Changed colors for fonts h4, h5. Makes them stand out more.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
         <p> <a href="mailto:ochoa@utexas.edu?">ochoa@utexas.edu</a></p>
         <p>________________________________________</p>
         <h2>Experience | Experiencia</h2>
+        
+        <h3>Software Engineer I at Keywords Studios: GameSim Austin</h3>
+        <ul>
+            <h4>Worked on internal projects and personal growth projects in UE4/5 and Unity</h4>
+            <p2>Developed deeper understanding of UE and Unity systems</p2>
+            <p2>Researched best approaches for profiling and better standards for implementation</p2>
+            <h4>Developing (with team and client) animation-oriented movement system plugin for UE5</h4>
+            <p2>Helped set it up, packaged it on weekly updates, worked on logic and extended UE base physics and other functionality when necessary</p2>
+            <p2>Collaborated remotely and in person with clients and teammates on projects, all being of diverse backgrounds and experience levels</p2>
+            <h5>UE4, Unity, C++, C#, Blueprints, Perforce, Jira, Monday, Scrum/Agile methodology</h5>
+        </ul>
+        
         <h3>Software Engineer Intern at EA: Industrial Toys Studio</h3>
         <ul>
             <h4>Developed a stats system in UE4's C++ class, GameInstanceSubsystem</h4>
@@ -155,16 +167,16 @@
                 <!-- <% if (detectMobile()) {%> -->
                 <!-- <embed src="Resumes/Resume - August2021.pdf" width="800px" height="1000px" /> -->
                 <!-- <% } endif %> -->
-                <p2><a href="Resumes/Resume - August2021.pdf">August 2021 Resume</a></p2>
-                <p2><a href="Resumes/Resume - May2021.pdf">May 2021 Resume</a></p2>
-                <p2><a href="Resumes/Resume-April2021.pdf">April 2021 Resume</a></p2>
-                <p2><a href="Resumes\Resume-Feb2021.pdf">Feb 2021 Resume</a></p2>
-                <p2><a href="Resumes/Jimenez_Osvaldo.resume.pdf"> Oct 2020 Resume</a></p2>
-                <p2><a href="Resumes/Resume%20--%20Current%20Sept%202020.pdf">Sept 2020 Resume</a></p2>
-                <p2><a href="Resumes/Resume%20--%20as%20of%202-21-2019%20-%20Osvaldo%20Jimenez.pdf">Feb 2019 Resume</a>
+                <p2><a href="Resumes/Resume - November2022.pdf">November 2022</a></p2>
+                <p2><a href="Resumes/Resume - August2021.pdf">August 2021</a></p2>
+                <p2><a href="Resumes/Resume - May2021.pdf">May 2021</a></p2>
+                <p2><a href="Resumes/Resume-April2021.pdf">April 2021</a></p2>
+                <p2><a href="Resumes\Resume-Feb2021.pdf">Feb 2021</a></p2>
+                <p2><a href="Resumes/Jimenez_Osvaldo.resume.pdf"> Oct 2020</a></p2>
+                <p2><a href="Resumes/Resume%20--%20Current%20Sept%202020.pdf">Sept 2020</a></p2>
+                <p2><a href="Resumes/Resume%20--%20as%20of%202-21-2019%20-%20Osvaldo%20Jimenez.pdf">Feb 2019</a>
                 </p2>
-                <p2><a href="Resumes/Resume%20--%20as%20of%2011_21_2018%20-%20Osvaldo%20Jimenez.docx">Oct 2018
-                        Resume</a></p2>
+                <p2><a href="Resumes/Resume%20--%20as%20of%2011_21_2018%20-%20Osvaldo%20Jimenez.docx">Oct 2018</a></p2>
                 <p>________________________________________</p>
                 <p></p>
     </div>
