removed resumes, rather have ppl request them

--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
 
                 <p>________________________________________</p>
 
-                <h2>Resume | Curriculum</h2>
+                <!-- <h2>Resume | Curriculum</h2> -->
                 <!-- <% if (detectMobile()) {%> -->
                 <!-- <embed src="Resumes/Resume - August2021.pdf" width="800px" height="1000px" /> -->
                 <!-- <% } endif %> -->
-                <p2><a href="Resumes/Resume - November2022.pdf">November 2022</a></p2>
+                <!-- <p2><a href="Resumes/Resume - November2022.pdf">November 2022</a></p2>
                 <p2><a href="Resumes/Resume - August2021.pdf">August 2021</a></p2>
                 <p2><a href="Resumes/Resume - May2021.pdf">May 2021</a></p2>
                 <p2><a href="Resumes/Resume-April2021.pdf">April 2021</a></p2>
@@ -185,6 +185,6 @@
                 </p2>
                 <p2><a href="Resumes/Resume%20--%20as%20of%2011_21_2018%20-%20Osvaldo%20Jimenez.docx">Oct 2018</a></p2>
                 <p>________________________________________</p>
-                <p></p>
+                <p></p> -->
     </div>
 </body>
