Added Audio Synesthesia Runner project

--- a/index.html
+++ b/index.html
@@ -59,14 +59,22 @@
         <h2>Works | Trabajos</h2>
         <p>Click on each to learn more!</p>
 
+        <h2><input type="button" value="Audio Synesthesia Runner" onclick="show(this, 'asr')" class="showClass" /></h2>
+        <div class="myWork" id="asr" tag="audioSynesthesia">
+            <h4>Endless runner at the beat of a song!</h4>
+            <iframe frameborder="0" src="https://itch.io/embed/2579783" width="552" height="167">
+                <a href="https://lajas.itch.io/audio-synesthesia-runner">Audio Synesthesia Runner by lajas</a></iframe>
+            <h5>Worked on audio, design, programming, and more. UE5, C++, Blueprints, MetaSounds, Garageband, Gitlab</h5>
+
+        </div>
+
         <h2><input type="button" value="Aire" onclick="show(this, 'aire')" class="showClass" /></h2>
         <div class="myWork" id="aire" tag="yee">
             <h4>Play as a dragon in a 3d environment!</h4>
-            <h5><a href="https://lajas.itch.io/aire"><img src="Images/aire_Title.png" class="img"></a></h5>
-            <h5><a href="https://lajas.itch.io/aire">Itch.io page</a> | <a href="https://youtu.be/3BBDMMhJJxE">Aire
-                    video demo</a> | <a
-                    href="https://drive.google.com/drive/folders/1Alqo_FqEXimQpQHkFgzV-wuLTrfRQ0Wb?usp=sharing">Aire
-                    Music Folder</a></h5>
+            <iframe frameborder="0" src="https://itch.io/embed/1047509" width="552" height="167">
+                <a href="https://lajas.itch.io/aire">Aire by lajas</a></iframe>
+            <h5><a href="https://youtu.be/3BBDMMhJJxE">Aire
+                    video demo</a>
             <h5>Worked on audio, design, programming, and more. UE4, C++ Blueprints, Garageband, Gitlab</h5>
 
         </div>
