--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Osvaldo Jimenez: Portfolio</h1>
 
         <h2>Contact | Contacto</h2>
-        <p> <a href="mailto:ochoa@utexas.edu?">ochoa@utexas.edu</a></p>
+        <p> <a href="mailto:ojimenez@gamesim.com?">ojimenez@gamesim.com</a></p>
         <p>________________________________________</p>
         <h2>Experience | Experiencia</h2>
         <p>Click on each to learn more!</p>
